[package]
name = "col"
version = "0.1.0"
edition = "2021"
authors = ["Volker Kempert <volker.kemper@almedso.de"]

[dependencies]
num_enum = { version = "0.5.7", default-features = false } # disable the default feature fits to  no-std
enum-display-derive = "0.1.1"
log = "0.4"
encoding = "0.2.33"
byteorder = "1.4.3"
num-traits = "0.2.5"
tokio-socketcan = "0.3.1"
parse_int = "0.6.0"
thiserror = "1.0.37"
futures-util = "0.3.28"
futures-timer = "3.0.2"
lazy_static = "1.4.0"
regex = "1.7.0"
array-init = "2.1.0"


[dev-dependencies]
clap = { version = "3.2.7", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
env_logger = "0.9.0"
log = "0.4"
socketcan = "1.7"
futures = "0.3"
mio = { version = "0.8", features = ["os-ext"] }
libc = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
futures-timer = "3.0"
futures-util = "0.3"
