[package]
name = "can-tool"
version = "0.1.0"
edition = "2021"
authors = ["Volker Kempert <volker.kemper@almedso.de"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
env_logger = "0.9.0"
log = "0.4"
quit = "1.1.4"

tokio-socketcan = "0.3.1"
socketcan = "1.7"
futures = "0.3"
mio = { version = "0.8", features = ["os-ext"] }
libc = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
futures-timer = "3.0"
futures-util = "0.3"
chrono = "0.4.19"
hex-slice = "0.1.4"
col = { path = "../canopen-lib" }
